--- a/example/bounds/index.html
+++ b/example/bounds/index.html
@@ -7,6 +7,7 @@
     }
   </style>
   <body>
+    <button id="next">next</button>
     <div id="viewer"></div>
     <script src="bundle.js"></script>
   </body>
