--- a/example/bounds/index.html
+++ b/example/bounds/index.html
@@ -7,7 +7,10 @@
     }
   </style>
   <body>
-    <button id="next">next</button>
+    <div>
+      <button id="next">next</button>
+      <span id="max">-Infinity</span>
+    </div>
     <div id="viewer"></div>
     <script src="bundle.js"></script>
   </body>
